# Hearing-Sheet-Music

./: setup.bash
hsm/: stack.xml
hsm/hsm_collection/: mainpage.dox  manifest.xml
hsm/hsm_collection/data/: .labels.swp  105510.jpg.lab  labels
hsm/hsm_collection/scripts/: find_crossings.py  generate_sheet_music.py  label_bounding.py  label_points.py  make_sheet_music.sh  make_sheet_music_accidental.sh  make_sheet_music_title.sh  r10c5.mb  r10c6.mb  r11c5.mb  r11c6.mb  r9c5.mb  r9c6.mb  test_sheet_music.sh  thresh.py  train_classif.py
hsm/hsm_generation/templates/: sharp_masked.xcf
visual_feedback/: stack.xml
visual_feedback/clothing_models/: CMakeLists.txt  mainpage.dox  manifest.xml
visual_feedback/clothing_models/scripts/: birdseye_maker.py  comparer.py  fit_model.py  fold_maker.py  model_maker.py
visual_feedback/clothing_models/src/: grabcut.cpp
visual_feedback/image_processor/: CMakeLists.txt  mainpage.dox  manifest.xml
visual_feedback/image_processor/config/: pants_model1.pickle  pants_model2.pickle  sweater_model1.pickle  sweater_model2.pickle  tee_model1.pickle  tee_model2.pickle  towel_model.pickle  triangles.pickle
visual_feedback/image_processor/include/: cpp_node.cpp
visual_feedback/image_processor/launch/: cpp.launch  shirt_fitter.launch  triangle_fitter.launch
visual_feedback/image_processor/src/: click_node.py  clump_center_node.py  cpp_bridge_node.py  furthest_corner_node.py  image_processor_node.py  shape_fitter_node.py  shape_fitting_utils.py  triangle_fitter_node.py
visual_feedback/image_processor/srv/: GetMatches.srv  MatchSocks.srv  ProcessBridge.srv  ProcessMono.srv  ProcessStereo.srv
visual_feedback/libsvm/: CMakeLists.txt  manifest.xml
visual_feedback/libsvm/python/libsvm/: svm.py  svmutil.py
visual_feedback/libsvm/tools/: easy.py  grid.py
visual_feedback/patch_vision/: CMakeLists.txt  mainpage.dox  manifest.xml
visual_feedback/patch_vision/include/: CMakeLists.txt
visual_feedback/patch_vision/scripts/: CMakeLists.txt  compare.bash  compare_socks.bash  feature_comparer.py  featuremap_to_svm.py  make_featuremap.cpp  make_featuremap.py  mask_maker.py  mask_maker_auto.py  match_labeler.py  match_to_points.py  multi_match_labeler.py  patch_labeler.py  patch_viewer.py  point_labeler.py  predict_labels.py  recover_ref_idx.py  test_mser.cpp  test_weight_features.py  train_classifier.py  train_dense_circle.bash  train_dense_square.bash  train_dip.bash  train_keypoint.bash  train_pts_circle.bash  train_sift.bash
visual_feedback/patch_vision/scripts/just_testing/: gradient_viewer.py
visual_feedback/snapshotter/: CMakeLists.txt  mainpage.dox  manifest.xml
visual_feedback/snapshotter/include/: snapshot_filter.cpp  snapshot_filter.h
visual_feedback/snapshotter/launch/: birdseye.launch  prosilica.launch  saver.launch  snapshotter.launch  snapshotter_mono.launch  snapshotter_stereo.launch
visual_feedback/snapshotter/msg/: ImageResult.msg  Snapshot.msg
visual_feedback/snapshotter/src/: birdseye_filter.py  checker_filter.py  crop_filter.py  ps3snapshot.py  snapshot_filter.py  snapshot_saver.py  snapshot_streamer.py  snapshotter.py
visual_feedback/snapshotter/srv/: GetSnapshot.srv  LoadSnapshot.srv  SaveSnapshot.srv  TakeAndSaveSnapshot.srv
visual_feedback/visual_feedback_utils/: CMakeLists.txt  mainpage.dox  manifest.xml
visual_feedback/visual_feedback_utils/models/: pants_model_contour_only.pickle  pants_no_structure.pickle  (+13 more)
(+57 files in other folders)
